--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 { 
     "short_name": "VIBRATOUR",
     "theme_color": "#77b9d3",
+    "background_color": "#77b9d3",
     "name": "aplicativo para conhecer os pontos turisticos da sua cidade",
     "start_url":"/index.html",
     "display":"standalone",
@@ -28,7 +29,8 @@
         { 
             "src":"icon/android/mipmap-xxhdpi/ic_launcher.png",
             "sizes":"144x144",
-            "type": "image/png"
+            "type": "image/png", 
+            "purpose": "any"
 
         }, 
 
