--- a/manifest.json
+++ b/manifest.json
@@ -335,9 +335,9 @@
               {
                 "src": "icons/android/android-launchericon-192-192.png",
                 "sizes": "192x192",
-                "type": "image/png",  
-                "purpose": "any"
-                          
+                "purpose": "any",
+                "type": "image/png"
+                
               },
               {
                 "src": "icons/android/android-launchericon-144-144.png",
