--- a/manifest.json
+++ b/manifest.json
@@ -335,8 +335,9 @@
               {
                 "src": "icons/android/android-launchericon-192-192.png",
                 "sizes": "192x192",
-                "purpose": "any",
-                "type": "image/png"
+                "type": "image/png",  
+                "purpose": "any maskable"
+                
                 
               },
               {
