--- a/manifest.json
+++ b/manifest.json
@@ -336,7 +336,7 @@
                 "src": "icons/android/android-launchericon-192-192.png",
                 "sizes": "192x192",
                 "type": "image/png",  
-                "purpose": "any maskable"
+                "purpose": "any"
                 
                 
               },
@@ -448,7 +448,7 @@
               {
                 "src": "icons/ios/192.png",
                 "sizes": "192x192",
-                "type": "imagem/png",
+                "type": "image/png",
                 "purpose": "any maskable"
                  
               },
