--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "theme_color": "#77b9d3",
     "background_color": "#77b9d3",
     "name": "aplicativo para conhecer os pontos turisticos da sua cidade",
-    "start_url":"/index.html",
+    "start_url":"index.html",
     "display":"standalone",
     "icons" : [
         {
